# QuantCell

./: .devdbrc  .gitignore  PLUGIN_MANAGEMENT.md  README.md  build_plugins.py  fix_crypto_spot_klines.py  fix_crypto_spot_klines_simple.py  list_routes.py  plugin_installer.py  plugin_packer.py  service_manager.py  setup.py  test_api.py  test_api_connection.py  test_backtest_failure.py  test_backtest_list.py  test_backtest_result.py  test_backtest_service.py  test_backtest_simple.py  test_data_fetch_diagnostics.py  test_data_source.py  test_data_source_simple.py  test_delete_strategy.py  test_duckdb_fix.py  test_duplicates.py  test_load_backtest.py  test_logging_demo.py  test_memory_system.py  test_merge_backtest.py  test_merged_equity_curve.py  test_multi_currency.py  test_network_diagnosis.py  test_parse_api.py  test_simple_upload.py  test_simple_upsert.py  test_single_currency.py  test_strategy.py  test_strategy_architecture.py  test_strategy_comprehensive.py  test_strategy_list.py  (+8 more)
backend/: .vultureignore  CODE_OPTIMIZATION_REPORT.md  WEBSOCKET_DIAGNOSIS_REPORT.md  __init__.py  check_data_pools_id.py  check_data_pools_table.py  check_json_trades.py  check_symbol_format.py  check_system_config_table.py  check_trades_detail.py  config.toml  config.yaml  config_manager.py  debug_adapter.py  debug_portfolio.py  debug_serialization.py  fix_data_pool_assets_id.py  main.py  migrate_crypto_symbols.py  migrate_data_pool_assets.py  package.json  pyproject.toml  qbot.code-workspace  run_migrations.py  test_actual_download.py  test_actual_download_with_microsecond.py  test_add_assets.py  test_backtest_api.py  test_config_load.py  test_connection_all.py  test_create_features.py  test_crypto_symbols.py  test_data_loader.py  test_datetime_consistency.py  test_duckdb_config.py  test_duckdb_connection.py  test_exchange_classes.py  test_exchange_factory.py  test_get_data.py  test_get_kline_data.py  (+12 more)
backend/agent/: __init__.py
backend/ai_model/: __init__.py  code_validator.py  config_utils.py  models.py  performance_monitor.py  routes.py  routes_strategy.py  schemas.py  schemas_strategy.py  services.py  strategy_generator.py  strategy_history.py  strategy_history_models.py  template_library.py  thinking_chain.py  thinking_chain_models.py  thinking_chain_schemas.py
backend/alembic/: env.py
backend/api/: __init__.py  system.py
backend/backtest/: README.md  __init__.py  cli.py  cli_core.py  data_downloader.py  data_integrity.py  data_manager.py  demo_service.py  merged_report.py  models.py  plot_utils.py  progress.py  progress_tracker.py  result_analysis.py  routes.py  schemas.py  service.py  standalone_downloader.py
backend/collector/: __init__.py  data_loader.py  routes.py  schemas_data_pool.py
backend/common/: schemas.py
backend/config/: __init__.py  binance_example.yaml
backend/core/: __init__.py  lifespan.py  scheduler.py
backend/docs/: binance_integration.md  exchange_status_monitoring.md
backend/example/: README_NAUT.md  demo_01.ipynb  demo_backtest.py
backend/examples/: demo_download.py  duckdb_demo.py  generate_calendar.py  test.py  test_ccxtpro_websocket.py  test_comprehensive_freq.py  test_demo_fix.py  test_freq_fix.py  test_frequency_formats.py  test_instruments_fix.py
backend/exchange/: __init__.py  base.py  connection.py  decorators.py  exceptions.py  exchange.py  types.py
backend/factor/: README.md  __init__.py  routes.py  schemas.py  service.py
backend/i18n/: config.py  convert_json_to_gettext.py  utils.py
backend/indicators/: executor.py  models.py  routes.py
backend/model/: routes.py  (+3 more)
(+909 files in other folders)
