[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "aiohttp-socks>=0.11.0",
    "alembic>=1.17.2",
    "apscheduler>=3.11.1",
    "backtesting>=0.3.3",
    "catboost>=1.2.8",
    "ccxt>=4.5.24",
    "certifi>=2025.11.12",
    "duckdb>=1.4.2",
    "duckdb-engine>=0.17.0",
    "fastapi-i18n>=0.12.0",
    "fastapi[standard]>=0.121.3",
    "fire>=0.7.1",
    "flake8>=7.3.0",
    "joblib>=1.5.2",
    "loguru>=0.7.3",
    "mypy>=1.18.2",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "polib>=1.2.0",
    "pyqlib>=0.9.7",
    "pytest>=9.0.1",
    "python-socks>=2.8.0",
    "sqlalchemy>=2.0.35",
    "statsmodels>=0.14.6",
    "ta-lib>=0.6.8",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
    "vectorbt>=0.28.2",
    "xgboost>=3.1.2",
]
