[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest-asyncio>=0.23.0",
    "aiohttp>=3.13.2",
    "aiohttp-socks>=0.11.0",
    "alembic>=1.17.2",
    "apscheduler>=3.11.1",
    "bcrypt>=5.0.0",
    "binance-sdk-derivatives-trading-usds-futures>=6.2.0",
    "binance-sdk-spot>=6.3.0",
    "catboost>=1.2.8",
    "ccxt>=4.5.24",
    "certifi>=2025.11.12",
    "duckdb>=1.4.2",
    "duckdb-engine>=0.17.0",
    "fastapi-i18n>=0.12.0",
    "fastapi[standard]>=0.121.3",
    "fire>=0.7.1",
    "flake8>=7.3.0",
    "joblib>=1.5.2",
    "loguru>=0.7.3",
    "mypy>=1.18.2",
    "numba>=0.63.1",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "plotly>=6.5.0",
    "polib>=1.2.0",
    "pyjwt>=2.10.1",
    "pyqlib>=0.9.7",
    "pysocks>=1.7.1",
    "pytest>=9.0.1",
    "pytest-mock>=3.12.0",
    "python-multipart>=0.0.20",
    "python-socks>=2.8.0",
    "pytz>=2025.2",
    "pyzmq>=27.1.0",
    "sqlalchemy>=2.0.35",
    "statsmodels>=0.14.6",
    "ta-lib>=0.6.8",
    "tomli>=2.1.0",
    "tomli-w>=1.1.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.2",
    "yfinance>=1.1.0",
    "ruff>=0.12.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "asyncio: marks tests as async",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests as API tests",
    "auth: marks tests as authentication tests",
    "schema: marks tests as schema validation tests",
    "error: marks tests as error handling tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
fail_under = 90

[tool.coverage.html]
directory = "htmlcov"
